# nlshell

./: README.md  main.py  pyproject.toml  settings.py  setup.py
.github/workflows/: python-publish.yml
command_genie/: main.py  settings.py
nlshell/: main.py  playground.py  settings.py
tests/: test_main.py  test_settings.py
