[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nlshell"
version = "0.1.1"
description = "Creates shell command from a description using an LLM"
authors = [{ name = "Mattias Brycke", email = "mattias.brycke@gmail.com" }]
requires-python = "~=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "openai>=2.6.1",
    "prompt-toolkit>=3.0.52",
]

[project.urls]

[project.scripts]
c = "nlshell.main:main"


