[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nlshell"
version = "0.1.2"
description = "Creates shell command from a description using an LLM"
authors = [{ name = "Mattias Brycke", email = "mattias.brycke@gmail.com" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "MIT"
dependencies = [
    "openai>=2.6.1",
    "prompt-toolkit>=3.0.52",
]

[project.urls]

[project.scripts]
c = "nlshell.main:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]


